added authentication logic

--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
 PASSWORD=WVtQDgYvY7lzMS6n;
 MONGODB_URI=mongodb+srv://shelepolya:WVtQDgYvY7lzMS6n@ts-api.k7xff6o.mongodb.net/?retryWrites=true&w=majority&appName=ts-api;
+SECRET=ihihaha1230987hihihaha;
